--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -154,6 +154,13 @@
   position: static;
   margin: auto;
 }
+.subscribe-box {
+    background-color: #0091EA;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 0.3em;
+    border-radius: 0.8em;
+}
     </style>
 </head>
 <body>
