Publish 'Designing for Real-World HTTPS'

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,10 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
+      b, strong {
+        color: #616161;
+        font-weight: 900;
+      }
       .code {
         font-family: 'Roboto-Mono', monospace;
         font-size: 26px;
