Add link to more blog posts at the bottom

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,11 +3,11 @@
 <div class="row">
     <div class="col-8 offset-2">
         <div class="row">
-            <div class="col-8">
-                <p>Hello, I'm Seth Michael Larson.</p>
+            <div class="col-6">
+                <p>I'm Seth Michael Larson.</p>
             </div>
-            <div class="col-4" style="text-align: right;">
-                <a href="{{ url_for('list_blog_posts') }}">Looking for my blog?</a>
+            <div class="col-6" style="text-align: center;">
+                <a href="{{ url_for('list_blog_posts') }}"><i class="fas fa-chevron-circle-right"></i> Looking for my blog?</a>
             </div>
         </div>
 
@@ -48,7 +48,7 @@
         </div>
         </p>
                 <p>I was born in Minneapolis, Minnesota and graduated from the University of Minnesota TC with a BS in Computer
-            Science. Besides programming I enjoy living lake life, exploring new places, following Minnesota sports,
+            Science. Besides programming I enjoy living lake life, gardening, following Minnesota sports,
             and playing games of all kinds.</p>
     </div>
 </div>
