--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -16,10 +16,10 @@
 </div>
 <div class="row">
     <div class="col-6" style="text-align: center;">
-        <a href="{{ url_for('rss_blog_posts') }}"><i class="fas fa-rss"></i> Subscribe via RSS</a>
+        <a href="{{ url_for('list_blog_posts') }}"><i class="fas fa-chevron-circle-right"></i> More Blog Posts</a>
     </div>
     <div class="col-6" style="text-align: center;">
-        <a href="https://twitter.com/sethmlarson"><i class="fab fa-twitter"></i> Subscribe via Twitter</a>
+        <a href="{{ url_for('rss_blog_posts') }}"><i class="fas fa-rss"></i> Subscribe via RSS</a>
     </div>
 </div>
 <br>
