Update website index

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -178,16 +178,16 @@ blockquote {
         <div class="container-fluid">
             <a href="{{ url_for('index') }}"><h1 style="color: #FFFFFF; font-size: 54px;">Python <i style="color: #FF8A80; font-size: 0.9em;" class="fas fa-heart"></i> HTTP</h1></a>
             <p style="font-size: 36px;">
-                <a href="{{ url_for('list_blog_posts') }}" aria-label="Visit Seth's Blog"><i
-                        class="hover-icon fas fa-blog"></i></a> —
-                <a href="mailto:sethmichaellarson@gmail.com" aria-label="Send an email to Seth"><i
+                <a href="{{ url_for('list_blog_posts') }}" aria-label="Blog"><i
+                        class="hover-icon fas fa-rss"></i></a> —
+                <a href="mailto:sethmichaellarson@gmail.com" aria-label="Email"><i
                         class="hover-icon fas fa-envelope"></i></a> —
-                <a href="https://github.com/sethmlarson" aria-label="Visit Seth's GitHub"><i
+                <a href="https://github.com/sethmlarson" aria-label="GitHub"><i
                         class="hover-icon fab fa-github"></i></a> —
-                <a href="https://twitter.com/sethmlarson" aria-label="Visit Seth's Twitter"><i
+                <a href="https://twitter.com/sethmlarson" aria-label="Twitter"><i
                         class="hover-icon fab fa-twitter"></i></a> —
-                <a href="https://keybase.io/sethmlarson" aria-label="Visit Seth's Keybase"><i
-                        class="hover-icon fab fa-keybase"></i></a> —
+                <a href="https://www.linkedin.com/in/sethmichaellarson" aria-label="LinkedIn"><i
+                        class="hover-icon fab fa-linkedin"></i></a> —
                 <a href="{{ url_for('get_pgp') }}"
                    aria-label="View Seth's PGP Key"><i
                         class="hover-icon fas fa-key"></i></a>
