--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
     <div class="col-8 offset-2">
         <div class="row">
             <div class="col-6">
-                <p>I'm Seth Michael Larson.</p>
+                <p>I'm Seth Michael Larson</p>
             </div>
             <div class="col-6" style="text-align: center;">
                 <a href="{{ url_for('list_blog_posts') }}"><i class="fas fa-chevron-circle-right"></i> Looking for my blog?</a>
@@ -30,7 +30,7 @@
                     <li><a href="https://github.com/urllib3/urllib3/">urllib3</a></li>
                     <li><a href="https://github.com/python-hyper/rfc3986/">rfc3986</a></li>
                     <li><a href="https://github.com/sethmlarson/virtualbox-python/">virtualbox</a></li>
-                    <li><a href="https://github.com/python-http/hstspreload">hstspreload</a></li>
+                    <li><a href="https://github.com/sethmlarson/hstspreload">hstspreload</a></li>
                     <li><a href="https://github.com/sethmlarson/whatwg-url">whatwg-url</a></li>
                     <li><a href="https://github.com/python-hyper/hyper-h2/">h2, hpack, hyperframe</a></li>
                 </ul>
