Update with new employer

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,18 +12,19 @@
             </div>
         </div>
 
-        <p>I'm a software engineer and maintainer of many Open Source projects in the Python ecosystem.</p>
+        <p>I work as a software engineer at <a href="https://www.elastic.co">Elastic</a>
+            maintaining the Open Source <a href="https://github.com/elastic/elasticsearch-py">Python client libraries</a>
+            among other Python-flavored things.</p>
 
         <p>I write a blog called "<a href="{{ url_for('list_blog_posts') }}">Python ♥ HTTP</a>" which contains my
-            thoughts and findings
-            related to Python, Open Source, HTTP, TLS, URLs, and more.</p>
+            thoughts and findings related to Python, Open Source, HTTP, TLS, URLs, and more.</p>
 
         <p>
             I maintain many Open Source projects, most notably I'm the lead maintainer for <a
-                href="https://github.com/urllib3/urllib3/">urllib3</a>
+                href="https://github.com/urllib3/urllib3">urllib3</a>
             which receives the <a href="https://pypistats.org/top">most downloads per day</a> of any package on PyPI.
-            Almost all the projects
-            I contribute to are related to HTTP or URLs. Here's a list of projects I maintain:
+            Almost all the projects I contribute to are related to HTTP or URLs.
+            Here's a list of projects I maintain:
 
         <div class="row" style="margin-left: 2em;">
             <div class="col-6">
@@ -52,8 +53,8 @@
         <p>
             I've been awarded the
             <a href="https://www.linkedin.com/posts/sethmichaellarson_ive-been-awarded-the-google-open-source-activity-6613836181647958017-IRbo">Google Open Source Peer Bonus</a>
-            for Q3 2019 for my work on urllib3 and worked on multiple development grants from <a href="https://gitcoin.co/grants/">GitCoin Grants</a>
-            and <a href="https://cert.lu/">​CERT Gouvernemental Luxembourg</a>.
+            for Q3 2019 for my work on urllib3 and worked on multiple development grants from <a href="https://gitcoin.co/grants">GitCoin Grants</a>
+            and <a href="https://cert.lu">​CERT Gouvernemental Luxembourg</a>.
         </p>
 
         <p>I was born in Minneapolis, Minnesota and graduated from the University of Minnesota TC with a BS in Computer
