Fix URL for GOVCERT

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,7 +54,7 @@
             I've been awarded the
             <a href="https://www.linkedin.com/posts/sethmichaellarson_ive-been-awarded-the-google-open-source-activity-6613836181647958017-IRbo">Google Open Source Peer Bonus</a>
             for Q3 2019 for my work on urllib3 and worked on multiple development grants from <a href="https://gitcoin.co/grants">GitCoin Grants</a>
-            and <a href="https://cert.lu">​CERT Gouvernemental Luxembourg</a>.
+            and <a href="https://govcert.lu">​CERT Gouvernemental Luxembourg</a>.
         </p>
 
         <p>I was born in Minneapolis, Minnesota and graduated from the University of Minnesota TC with a BS in Computer
