--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,206 +2,165 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}Python ♥ HTTP{% endblock %}</title>
+    <title>{% block title %}sethmlarson.dev{% endblock %}</title>
     <meta name="description" content="A blog about Python, HTTP, Networking, and Security">
     <meta name="keywords" content="Python, HTTP, Networking, Security">
     <meta name="author" content="Seth Michael Larson">
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:400,900&display=swap">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css"
-          integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.min.css"
-          integrity="sha256-D9AvR0EzkNZoWZVSvI3ch+uf/Z5izrIpcbsykVphwPU=" crossorigin="anonymous"/>
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-reboot.min.css"
-          integrity="sha256-dARYuC3pd0wa/7R4Hkt/sR2zfLHCgbnVAQ2sPwhNe0A=" crossorigin="anonymous"/>
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{ url_for('rss_blog_posts') }}"/>
     <link rel="icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/static/simplegrid.min.css">
     <style>
-      html, body {
-        font-family: 'Roboto', sans-serif;
-        font-weight: 400;
-        font-size: 26px;
-        color: #424242;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
+      @font-face {
+        font-family: "JetBrains Mono";
+        font-style: normal;
+        font-weight: 300;
+        src: url(/static/JetBrainsMono-Light.woff) format("woff"),
+        url(/static/JetBrainsMono-Light.woff2) format("woff2");
+        font-display: swap;
       }
-      b, strong {
-        color: #616161;
-        font-weight: 900;
+      @font-face {
+        font-family: "JetBrains Mono";
+        font-style: normal;
+        font-weight: 700;
+        src: url(/static/JetBrainsMono-Bold.woff) format("woff"),
+        url(/static/JetBrainsMono-Bold.woff2) format("woff2");
+        font-display: swap;
       }
-      .code {
-        font-family: 'Roboto-Mono', monospace;
-        font-size: 26px;
-        background-color: #E0E0E0;
-        border-radius: 4px;
+      html, body, code {
+        font-family: 'JetBrains Mono', monospace;
+        font-weight: 300;
+        font-size: 24px;
+        color: #ffffff;
+        background-color: #1f1f27;
       }
-      pre {
-        font-family: 'Roboto-Mono', monospace;
-        font-size: 26px;
-        color: #FFFFFF;
-        background-color: #424242;
-        padding: 1em;
-        border-radius: 1em;
+      b {
+        font-weight: 700;
       }
-      h1, h2, h3 {
-        font-weight: 900;
-        color: #616161;
-      }
-      h1 {font-size: 48px;}
-      h2 {font-size: 40px;}
-      h3 {font-size: 34px;}
-      .banner {
-       background-color: #0091EA;
-       color: #FFFFFF;
-       text-align: center;
-       padding-bottom: 12px;
-       padding-top: 12px;
-       width: 100%;
-       margin-bottom: 1em;
-      }
-      a:link {
-        color: #0091EA;
+      a {
+        text-decoration: none;
+        transition: 0.3s;
+        color: #5e81ac;
       }
       a:hover {
-        color: #80D8FF;
-        text-decoration: none;
-      }
-      .hover-icon {
-        color: #FFFFFF;
-      }
-      .hover-icon:hover {
-        color: #80D8FF;
+        color: #2f7cda;
       }
 
-.hll { background-color: #49483e }
-.c { color: #75715e } 
-.err { color: #960050; background-color: #1e0010 } 
-.k { color: #66d9ef } 
-.l { color: #ae81ff } 
-.n { color: #f8f8f2 } 
-.o { color: #f92672 } 
-.p { color: #f8f8f2 } 
-.ch { color: #75715e } 
-.cm { color: #75715e } 
-.cp { color: #75715e } 
-.cpf { color: #75715e } 
-.c1 { color: #75715e } 
-.cs { color: #75715e } 
-.gd { color: #f92672 } 
-.ge { font-style: italic } 
-.gi { color: #a6e22e } 
-.gs { font-weight: bold } 
-.gu { color: #75715e } 
-.kc { color: #66d9ef } 
-.kd { color: #66d9ef } 
-.kn { color: #f92672 } 
-.kp { color: #66d9ef } 
-.kr { color: #66d9ef } 
-.kt { color: #66d9ef } 
-.ld { color: #e6db74 } 
-.m { color: #ae81ff } 
-.s { color: #e6db74 } 
-.na { color: #a6e22e } 
-.nb { color: #f8f8f2 } 
-.nc { color: #a6e22e } 
-.no { color: #66d9ef } 
-.nd { color: #a6e22e } 
-.ni { color: #f8f8f2 } 
-.ne { color: #a6e22e } 
-.nf { color: #a6e22e } 
-.nl { color: #f8f8f2 } 
-.nn { color: #f8f8f2 } 
-.nx { color: #a6e22e } 
-.py { color: #f8f8f2 } 
-.nt { color: #f92672 } 
-.nv { color: #f8f8f2 } 
-.ow { color: #f92672 } 
-.w { color: #f8f8f2 } 
-.mb { color: #ae81ff } 
-.mf { color: #ae81ff } 
-.mh { color: #ae81ff } 
-.mi { color: #ae81ff } 
-.mo { color: #ae81ff } 
-.sa { color: #e6db74 } 
-.sb { color: #e6db74 } 
-.sc { color: #e6db74 } 
-.dl { color: #e6db74 } 
-.sd { color: #e6db74 } 
-.s2 { color: #e6db74 } 
-.se { color: #ae81ff } 
-.sh { color: #e6db74 } 
-.si { color: #e6db74 } 
-.sx { color: #e6db74 } 
-.sr { color: #e6db74 } 
-.s1 { color: #e6db74 } 
-.ss { color: #e6db74 } 
-.bp { color: #f8f8f2 } 
-.fm { color: #a6e22e } 
-.vc { color: #f8f8f2 } 
-.vg { color: #f8f8f2 } 
-.vi { color: #f8f8f2 } 
-.vm { color: #f8f8f2 } 
-.il { color: #ae81ff } 
+      ul {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+}
 
-blockquote {
-  padding: 0.5em;
+li {
   padding-left: 1em;
-  color: #616161;
-  background-color: #E0E0E0;
+  text-indent: -1em;
 }
 
-.screenreader-text {
-  position: absolute;
-  left: -999px;
-  width: 1px;
-  height: 1px;
-  top: auto;
+li:before {
+  content: "—";
+  padding-right: 5px;
 }
-.screenreader-text:focus {
-  color: black;
-  display: inline-block;
-  height: auto;
-  width: auto;
-  position: static;
-  margin: auto;
+
+span {
+  border-right: .05em solid;
+  animation: caret 1s steps(1) infinite;
 }
+
+@keyframes caret {
+  50% {
+    border-color: transparent;
+  }
+}
+.hll { background-color: #214283 }
+.c { color: #808072 } /* Comment */
+.err { color: #960050 } /* Error */
+.g { color: #808072 } /* Generic */
+.k { color: #CB772F } /* Keyword */
+.l { color: #6897BB } /* Literal */
+.n { color: #A9B7C6 } /* Name */
+.o { color: #A9B7C6 } /* Operator */
+.p { color: #A9B7C6 } /* Punctuation */
+.ch { color: #808072 } /* Comment.Hashbang */
+.cm { color: #53833D } /* Comment.Multiline */
+.cp { color: #808072 } /* Comment.Preproc */
+.cpf { color: #808072 } /* Comment.PreprocFile */
+.c1 { color: #808072 } /* Comment.Single */
+.cs { color: #808072 } /* Comment.Special */
+.gd { color: #A9B7C6 } /* Generic.Deleted */
+.ge { color: #808072; font-style: italic } /* Generic.Emph */
+.gr { color: #808072 } /* Generic.Error */
+.gh { color: #88BE05; font-weight: bold } /* Generic.Heading */
+.gi { color: #88BE05 } /* Generic.Inserted */
+.go { color: #808072 } /* Generic.Output */
+.gp { color: #808072; font-weight: bold } /* Generic.Prompt */
+.gs { color: #808072; font-weight: bold } /* Generic.Strong */
+.gu { color: #A9B7C6 } /* Generic.Subheading */
+.gt { color: #808072 } /* Generic.Traceback */
+.kc { color: #CB772F } /* Keyword.Constant */
+.kd { color: #CB772F } /* Keyword.Declaration */
+.kn { color: #CB772F } /* Keyword.Namespace */
+.kp { color: #CB772F } /* Keyword.Pseudo */
+.kr { color: #CB772F } /* Keyword.Reserved */
+.kt { color: #CB772F } /* Keyword.Type */
+.ld { color: #6A8759 } /* Literal.Date */
+.m { color: #6897BB } /* Literal.Number */
+.s { color: #6A8759 } /* Literal.String */
+.na { color: #A9B7C6 } /* Name.Attribute */
+.nb { color: #A9B7C6 } /* Name.Builtin */
+.nc { color: #A9B7C6 } /* Name.Class */
+.no { color: #CB772F } /* Name.Constant */
+.nd { color: #F1C829 } /* Name.Decorator */
+.ni { color: #A9B7C6 } /* Name.Entity */
+.ne { color: #88BE05 } /* Name.Exception */
+.nf { color: #FFC66D } /* Name.Function */
+.nl { color: #A9B7C6 } /* Name.Label */
+.nn { color: #A9B7C6 } /* Name.Namespace */
+.nx { color: #88BE05 } /* Name.Other */
+.py { color: #A9B7C6 } /* Name.Property */
+.nt { color: #F1C829 } /* Name.Tag */
+.nv { color: #A9B7C6 } /* Name.Variable */
+.ow { color: #A9B7C6 } /* Operator.Word */
+.w { color: #A9B7C6 } /* Text.Whitespace */
+.mb { color: #6897BB } /* Literal.Number.Bin */
+.mf { color: #6897BB } /* Literal.Number.Float */
+.mh { color: #6897BB } /* Literal.Number.Hex */
+.mi { color: #6897BB } /* Literal.Number.Integer */
+.mo { color: #6897BB } /* Literal.Number.Oct */
+.sb { color: #6A8759 } /* Literal.String.Backtick */
+.sc { color: #6A8759 } /* Literal.String.Char */
+.sd { color: #6A8759 } /* Literal.String.Doc */
+.s2 { color: #6A8759 } /* Literal.String.Double */
+.se { color: #6897BB } /* Literal.String.Escape */
+.sh { color: #6A8759 } /* Literal.String.Heredoc */
+.si { color: #6A8759 } /* Literal.String.Interpol */
+.sx { color: #6A8759 } /* Literal.String.Other */
+.sr { color: #6A8759 } /* Literal.String.Regex */
+.s1 { color: #6A8759 } /* Literal.String.Single */
+.ss { color: #6A8759 } /* Literal.String.Symbol */
+.bp { color: #A9B7C6 } /* Name.Builtin.Pseudo */
+.vc { color: #A9B7C6 } /* Name.Variable.Class */
+.vg { color: #A9B7C6 } /* Name.Variable.Global */
+.vi { color: #A9B7C6 } /* Name.Variable.Instance */
+.il { color: #6897BB } /* Literal.Number.Integer.Long */
     </style>
 </head>
 <body>
-<a id='skip-nav' aria-label="Skip to Content" class='screenreader-text' href='#main-content'>
-    Skip to Content
-</a>
-<div class="banner">
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container-fluid">
-            <a href="{{ url_for('index') }}"><h1 style="color: #FFFFFF; font-size: 54px;">Python <i style="color: #FF8A80; font-size: 0.9em;" class="fas fa-heart"></i> HTTP</h1></a>
-            <p style="font-size: 36px;">
-                <a href="{{ url_for('list_blog_posts') }}" aria-label="Blog"><i
-                        class="hover-icon fas fa-rss"></i></a> —
-                <a href="mailto:sethmichaellarson@gmail.com" aria-label="Email"><i
-                        class="hover-icon fas fa-envelope"></i></a> —
-                <a href="https://github.com/sethmlarson" aria-label="GitHub"><i
-                        class="hover-icon fab fa-github"></i></a> —
-                <a href="https://twitter.com/sethmlarson" aria-label="Twitter"><i
-                        class="hover-icon fab fa-twitter"></i></a> —
-                <a href="https://www.linkedin.com/in/sethmichaellarson" aria-label="LinkedIn"><i
-                        class="hover-icon fab fa-linkedin"></i></a> —
-                <a href="{{ url_for('get_pgp') }}"
-                   aria-label="View Seth's PGP Key"><i
-                        class="hover-icon fas fa-key"></i></a>
-            </p>
-        </div>
-    </div>
-</div>
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-        <div class="col-12 offset-0 col-lg-8 offset-lg-2">
-            <span id="main-content"></span>
-            {% block content %}{% endblock %}
+        <div class="col-12">
+            <center>
+                <h1>sethmlarson.dev</h1>
+                <a href="/">About</a> –
+                <a href="{{ url_for('list_blog_posts') }}">Blog</a> –
+                <a href="{{ url_for('rss_blog_posts') }}">RSS</a> -
+                <a href="mailto:sethmichaellarson@gmail.com">Email</a> –
+                <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener noreferrer">Twitter</a> –
+                <a href="https://github.com/sethmlarson" target="_blank" rel="noopener noreferrer">GitHub</a> –
+                <a href="https://www.linkedin.com/in/sethmichaellarson" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+            </center>
         </div>
     </div>
+{% block content %}{% endblock %}
 </div>
 </body>
 </html>
