--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,8 +7,8 @@
         <div class="col-10">
             <h2>Who am I?</h2>
             <p>
-                My pronouns are he/him. I was born and raised in Minneapolis, Minnesota.
-                Graduated from the University of Minnesota with a B.S. in Computer Science.
+                My pronouns are he/him. I was born and raised in Minneapolis, Minnesota
+                and graduated from the University of Minnesota with a B.S. in Computer Science.
                 I love playing games of all kinds, watching Minnesota sports, gardening, and being outdoors.
             </p>
             <h2>Open Source Maintainer</h2>
