Add footer to blog posts

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -140,11 +140,10 @@ li:before {
     <div class="row">
         <div class="col-12">
             <center>
-                <h1>{% block header %}sethmlarson.dev{% endblock %}</h1>
+                <h1>{% block header %}sethmlarson<span class="rgb">.</span>dev{% endblock %}</h1>
                 <a href="/">About</a> –
                 <a href="{{ url_for('list_blog_posts') }}">Blog</a> –
                 <a href="{{ url_for('rss_blog_posts') }}">RSS</a> -
-                <a href="mailto:sethmichaellarson@gmail.com">Email</a> –
                 <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener noreferrer">Twitter</a> –
                 <a href="https://github.com/sethmlarson" target="_blank" rel="noopener noreferrer">GitHub</a> –
                 <a href="https://www.linkedin.com/in/sethmichaellarson" target="_blank" rel="noopener noreferrer">LinkedIn</a>
