--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -17,4 +17,17 @@
     </div>
     <div class="col-1"></div>
 </div>
+<div class="row" style="margin-bottom: 3em;">
+    <div class="col-1"></div>
+    <div class="col-2" style="text-align: right;">
+        <span style="font-size: 2rem;">\</span><span style="font-size: 3rem;">☺</span><span style="font-size: 2rem;">/</span>
+    </div>
+    <div class="col-8">
+        <h3>Enjoy this post and want more?</h3>
+
+        <p>Get notified when there are new posts via <a href="https://tinyletter.com/sethmlarson">Email</a> and <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
+        or <a href="{{ url_for('list_blog_posts') }}">read other blog posts</a> while you wait.</p>
+    </div>
+    <div class="col-1"></div>
+</div>
 {% endblock %}
