--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -25,7 +25,7 @@
     <div class="col-8">
         <h3>Enjoy this post and want more?</h3>
 
-        <p>Get notified when there are new posts via <a href="https://tinyletter.com/sethmlarson">Email</a> and <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
+        <p>Get notified when there are new posts via <a href="https://tinyletter.com/sethmlarson" target="_blank" rel="nofollow noopener noreferrer">Email</a> and <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
         or <a href="{{ url_for('list_blog_posts') }}">read other blog posts</a> while you wait.</p>
     </div>
     <div class="col-1"></div>
