Fix typo in brotlicffi

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
                 <a href="https://github.com/psf/requests" target="_blank" rel="noopener noreferrer">requests</a>,
                 <a href="https://utf8.xyz" target="_blank" rel="noopener noreferrer">utf8.xyz</a>,
                 <a href="https://github.com/python-hyper/rfc3986" target="_blank" rel="noopener noreferrer">rfc3986</a>,
-                <a href="https://github.com/python-hyper/brotlicffi" target="_blank" rel="noopener noreferrer">brotlipcffi</a>,
+                <a href="https://github.com/python-hyper/brotlicffi" target="_blank" rel="noopener noreferrer">brotlicffi</a>,
                 <a href="https://github.com/sethmlarson/hstspreload" target="_blank" rel="noopener noreferrer">hstspreload</a>,
                 <a href="https://github.com/python-trio/sniffio" target="_blank" rel="noopener noreferrer">sniffio</a>, and
                 <a href="https://github.com/python-trio/unasync" target="_blank" rel="noopener noreferrer">unasync</a>.
