Fix OpenGraph meta and add image

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -138,6 +138,7 @@ li:before {
     <meta property="og:title" content="sethmlarson.dev"/>
     <meta property="og:type" content="article"/>
     <meta property="og:description" content="A blog about Python, open source, HTTP, networking, and security"/>
+    <meta property="og:image" content="/static/avatar.jpeg"/>
 {% endblock %}
 </head>
 <body>
