Add twitter meta to header

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -139,6 +139,11 @@ li:before {
     <meta property="og:type" content="article"/>
     <meta property="og:description" content="A blog about Python, open source, HTTP, networking, and security"/>
     <meta property="og:image" content="/static/avatar.jpeg"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:site" content="@sethmlarson"/>
+    <meta name="twitter:creator" content="@sethmlarson"/>
+    <meta name="twitter:title" content="sethmlarson.dev"/>
+    <meta name="twitter:description" content="A blog about Python, open source, HTTP, networking, and security"/>
 {% endblock %}
 </head>
 <body>
