--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -6,6 +6,11 @@
     <meta property="og:type" content="article"/>
     <meta property="og:description" content="{{ blog_content_text | truncate(200, true, '...')}}"/>
     <meta property="og:image" content="/static/avatar.jpeg"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:site" content="@sethmlarson"/>
+    <meta name="twitter:creator" content="@sethmlarson"/>
+    <meta name="twitter:title" content="{{ blog_title }} — sethmlarson.dev"/>
+    <meta name="twitter:description" content="{{ blog_content_text | truncate(200, true, '...')}}"/>
 {% endblock %}
 {% block content %}
 <div class="row">
